--- a/src/app/modules/registro/registro.component.html
+++ b/src/app/modules/registro/registro.component.html
@@ -292,7 +292,7 @@
                        </mat-form-field>
                     </p>
                  </div>
-                 <div class="col-md-6">
+               <!--  <div class="col-md-6">
                     <p>
                        <mat-form-field appearance="outline" class="inputs_properties">
                           <mat-label>Contraseña</mat-label>
@@ -306,7 +306,7 @@
                           <mat-error *ngIf="form.get('pass')?.hasError('required')"><strong class="txt_msg">**Campo requerido</strong></mat-error>
                        </mat-form-field>
                     </p>
-                 </div>
+                 </div>-->
               </div>
               <div class="button-container">
                 <button class="btn_int" (click)="registrar()" mat-raised-button style="background: #fd9727; color: white; width: 30%;">
