--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -3,7 +3,7 @@
     <div class="content_grid_padre">
       <div class="content_grid_h1">
         <div class="title_page">
-          <h1>Punto de venta</h1>
+          <h1>Inicio de sesión</h1>
           <h4>Ingrese sus credenciales</h4>
         </div>
         <!--cierra div title pagina-->
