Se modifico el registro de colaborador
update del componente alta colaborador

--- a/src/app/modules/editar-colaborador/editar-colaborador.component.html
+++ b/src/app/modules/editar-colaborador/editar-colaborador.component.html
@@ -90,7 +90,7 @@
 
                       <div style="display: flex; justify-content: center;">
                         <button mat-raised-button type="submit"  style="background-color: #fd9727; font-size: 20px; margin-top: 17px; height: 40px; margin-right: 90px;width: 120px;">Aceptar</button>
-                        <button mat-raised-button    routerLink="/admin/colaboradores" style="background-color: #000000; font-size: 20px; margin-top: 17px; height: 40px;color: white; width: 120px;">Cancelar</button>
+                        <button mat-raised-button    routerLink="/home/colaboradores" style="background-color: #000000; font-size: 20px; margin-top: 17px; height: 40px;color: white; width: 120px;">Cancelar</button>
                       </div>  
                     </div>  
                 </form>
