--- a/src/app/modules/alta-colaboradores/alta-colaboradores.component.html
+++ b/src/app/modules/alta-colaboradores/alta-colaboradores.component.html
@@ -60,8 +60,8 @@
                           <mat-label>Área</mat-label>
                           <mat-select id="area" formControlName="area" id="area" [errorStateMatcher]="matcher">
                             <mat-option></mat-option>
-                            <mat-option value="1">Entrenamiento</mat-option>
-                            <mat-option value="2">Recepción</mat-option>
+                            <mat-option *ngIf="isSupadmin()" value="2">Administrador</mat-option>
+                            <mat-option *ngIf="isAdmin() || isSupadmin()" value="4">Recepcionista</mat-option>
                           </mat-select>
                           <mat-error *ngIf="form.get('area')?.hasError('required')">
                             <strong class="txt_msg">**Campo requerido</strong>
@@ -112,7 +112,7 @@
 
                         <div style="display: flex; justify-content: center;">
                           <button mat-raised-button type="submit"  style="background-color: #fd9727; font-size: 20px; margin-top: 17px; height: 40px; margin-right: 90px;width: 120px;">Aceptar</button>
-                          <button mat-raised-button  routerLink="/admin/colaboradores" style="background-color: #000000; font-size: 20px; margin-top: 17px; height: 40px;color: white; width: 120px;">Cancelar</button>
+                          <button mat-raised-button  routerLink="/home/colaboradores" style="background-color: #000000; font-size: 20px; margin-top: 17px; height: 40px;color: white; width: 120px;">Cancelar</button>
                         </div>  
                                    
                     </div>
