--- a/src/app/modules/alta-categoria/alta-categoria.component.css
+++ b/src/app/modules/alta-categoria/alta-categoria.component.css
@@ -50,5 +50,16 @@
     margin-top: 80px;
    }
   
+
+   /* Estilo para el rectángulo naranja en la parte superior del diálogo */
+.orange-header {
+  background-color: #000000;
+  color: rgb(255, 255, 255);
+  padding: 8px;
+  text-align: center;
+  font-size: 20px;
+  font-weight: bold;
+}
+
   
   
