--- a/src/app/modules/alta-categoria/alta-categoria.component.html
+++ b/src/app/modules/alta-categoria/alta-categoria.component.html
@@ -1,4 +1,8 @@
 <div class="container mt-4">
+   <!--<div class="orange-header">
+      Contenido para el rectángulo naranja 
+      <p>¡Este es tu encabezado naranja!</p>
+    </div>-->
     <div class="responsive-div">
        <mat-tab-group >
           <mat-tab label="Categoria" style="font-size: xx-large;">
@@ -25,7 +29,7 @@
                       </div>
                       <div class="col-sm-6">
                          <p>
-                            <mat-form-field style="width: 100%;height: 80px;" autocomplete="off" required>
+                            <mat-form-field style="width: 100%;height: 80px;" autocomplete="off" appearance="outline" required>
                                <mat-label style="font-family: Arial; font-size: 18px;">Seleccionar</mat-label>
                                <mat-select id="estatus" formControlName="estatus">
                                   <mat-option value="1" style="font-family: Arial; font-size: 18px;">Activo</mat-option>
@@ -36,25 +40,15 @@
                       </div>
                    </div>
                    <div class="row">
-                      <div class="col-sm-6">
-                         <label>Fecha creación:</label>
-                      </div>
-                   </div>
-                   <div >
-                      <div class="col-sm-6">
-                         <p>
-                            <mat-form-field appearance="outline"  style="width: 96%;" required>
-                               <mat-label>Fecha creación</mat-label>
-                               <input type="date" placeholder="2003" matInput autocomplete="off" id="fechaCreacion" formControlName="fechaCreacion">
-                            </mat-form-field>
-                         </p>
-                      </div>
-                   </div>
-                   <div class="row">
-                      <div class="col-sm-6">
-                         <label >Descripción:</label>
-                      </div>
-                   </div>
+                     <div class="col-sm-6">
+                        <label >Descripción:</label>
+                     </div>
+                     <div class="col-sm-6">
+                        <label>Fecha creación:</label>
+                     </div>
+                  </div>
+
+
                    <div class="row">
                       <div class="col-sm-6">
                          <p>
@@ -64,6 +58,15 @@
                             </mat-form-field>
                          </p>
                       </div>
+
+                      <div class="col-sm-6">
+                        <p>
+                           <mat-form-field appearance="outline"  style="width: 96%;" required>
+                              <mat-label>Fecha creación</mat-label>
+                              <input type="date" placeholder="2003" matInput autocomplete="off" id="fechaCreacion" formControlName="fechaCreacion">
+                           </mat-form-field>
+                        </p>
+                     </div>
                    </div>
                    <div style="display: flex; justify-content: center;">
                       <button mat-stroked-button type="submit" (click)="enviar()" style="background-color: #fd9727; font-size: 20px; margin-top: 17px; height: 40px; margin-right: 90px;">Aceptar</button>
