--- a/src/app/modules/categorias/categorias.component.html
+++ b/src/app/modules/categorias/categorias.component.html
@@ -4,7 +4,7 @@
      <button
         mat-raised-button
         (click)="altaCategoria()"
-        style="background-color: #fd9727; font-size: 16px; margin-right: 100px"
+        style="background-color: #fd9727; font-size: 16px; "
         >
         <mat-icon>add</mat-icon>
         AGREGAR CATEGORIA
