--- a/src/app/modules/dialog-select-membership/dialog-select-membership.component.css
+++ b/src/app/modules/dialog-select-membership/dialog-select-membership.component.css
@@ -6,7 +6,6 @@
 
 .title {
     text-align: center;
-    padding-block: 20px;
 }
 
 .options {
@@ -68,3 +67,20 @@
     text-align: center;
 }
 
+.responsive-div {
+    width: 100%; /* El div ocupa todo el ancho disponible */
+    height: 100%;
+    max-width: 1000px; /* Ancho máximo para evitar que se extienda demasiado en pantallas grandes */
+    max-height: 9000px;
+    margin: 0 auto; /* Centra el div horizontalmente en la pantalla */
+    padding: 20px; /* Agrega espaciado interno si es necesario */
+    /* Otros estilos personalizados para tu div */
+  }
+
+  .center-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+  }
+  
