--- a/src/app/modules/productos/productos.component.html
+++ b/src/app/modules/productos/productos.component.html
@@ -5,7 +5,7 @@
     <button
         mat-raised-button
         (click)="crearProducto()"
-        style="background-color: #fd9727; font-size: 16px; margin-right: 100px"
+        style="background-color: #fd9727; font-size: 16px"
       >
         <mat-icon>add</mat-icon>AGREGAR PRODUCTO
       </button> 
