se hacen ajustes supAdmin sucursales

--- a/src/app/modules/horarios-vista/horarios-vista.component.html
+++ b/src/app/modules/horarios-vista/horarios-vista.component.html
@@ -82,8 +82,8 @@
               </mat-select>
             </mat-form-field>
           </p>
-          <!--<p><label style="margin-right: 40px; margin-left: 45px;" class="large-text">DISPONIBLE:</label></p>-->
-          <!--<p>
+          <p><label style="margin-right: 40px; margin-left: 45px;" class="large-text">DISPONIBLE:</label></p>
+          <p>
             <label style="margin-left: 45px;" for="casilleros" class="large-text">Casilleros:</label>
             <mat-radio-group style="margin-left: 70px;" formControlName="casilleros" id="casilleros" class="custom-radio-group" color="warn" required>
               <mat-radio-button value="1" class="custom-radio-button">Sí</mat-radio-button>
@@ -111,7 +111,7 @@
               <mat-radio-button value="1" class="custom-radio-button">Sí</mat-radio-button>
               <mat-radio-button value="0" class="custom-radio-button">No</mat-radio-button>
             </mat-radio-group>
-          </p>-->
+          </p>-
           <br />
           <br />
         </div>
