--- a/src/app/modules/service-dialog/service-dialog.component.html
+++ b/src/app/modules/service-dialog/service-dialog.component.html
@@ -1,6 +1,6 @@
 <div class="main">
-    <h1 *ngIf="seleccionado == 1" class="title">AGREGA UN SERVICIO</h1>
-    <h1 *ngIf="seleccionado == 2" class="title">EDITA UN SERVICIO</h1>
+    <h1 *ngIf="seleccionado == 1" class="title">Agregar Servicio</h1>
+    <h1 *ngIf="seleccionado == 2" class="title">Editar Servicio</h1>
 
     <form [formGroup]="serviceForm">
         <div class="form-group">
@@ -15,18 +15,7 @@
                   </mat-error>
             </mat-form-field>
         </div>
-        <div class="form-group">
-            <mat-form-field class="full-width">
-                <mat-label>Detalles</mat-label>
-                <textarea matInput formControlName="detalles" placeholder="Detalles"></textarea>
-                <mat-error *ngIf="isFieldInvalidService('detalles', 'required')">
-                    El detalle es requerido.
-                  </mat-error>
-                  <mat-error *ngIf="isFieldInvalidService('detalles', 'pattern')">
-                    Solo se aceptan letras.
-                  </mat-error>
-            </mat-form-field>
-        </div>
+        
         <div class="form-group">
             <mat-form-field class="full-width">
                 <mat-label>Precio unitario</mat-label>
@@ -39,10 +28,24 @@
                   </mat-error>
             </mat-form-field>
         </div>
+
+        <div class="form-group">
+            <mat-form-field class="full-width">
+                <mat-label>Detalles</mat-label>
+                <textarea matInput formControlName="detalles" placeholder="Detalles"></textarea>
+                <mat-error *ngIf="isFieldInvalidService('detalles', 'required')">
+                    El detalle es requerido.
+                  </mat-error>
+                  <mat-error *ngIf="isFieldInvalidService('detalles', 'pattern')">
+                    Solo se aceptan letras.
+                  </mat-error>
+            </mat-form-field>
+        </div>
+         
+        </form>
         <div style="display: flex; justify-content: center;">
             <button *ngIf="seleccionado == 1" mat-stroked-button type="submit" (click)="validaFormService()" style="background-color: #fd9727; font-size: 20px; margin-top: 17px; height: 40px; margin-right: 90px;">Aceptar</button>
             <button *ngIf="seleccionado == 2" mat-stroked-button type="submit" (click)="actualizarForm()" style="background-color: #fd9727; font-size: 20px; margin-top: 17px; height: 40px; margin-right: 90px;">Actualizar</button>
             <button mat-stroked-button (click)="cancelar()" style="background-color: #000000; font-size: 20px; margin-top: 17px; height: 40px;color: white;">Cancelar</button>
-          </div>  
-        </form>
+          </div> 
 </div>
